--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -14,3 +14,9 @@ flarum-ext-dontgoaway:
     altdesc: Set the "alt" attributes for your image
     btn: Customize Button. Syntax example in the palceholder
     btndesc: u can setup your fontawesome icon and text for the button
+    enableExtLink: Enable Popup on external link
+  forum:
+    extlinktitle: External Link
+    extlinktext: U are leaving the site by clicking on an external link
+    confbutton: Continue
+    cancelbutton: Stay here!
